[gd_scene load_steps=14 format=3 uid="uid://ccpx0tkj28ess"]

[ext_resource type="Script" path="res://dialog/DialogWin.gd" id="1_d2lr1"]
[ext_resource type="Script" path="res://dialog/DynamicSizeLabel.gd" id="2_pfbio"]
[ext_resource type="Texture2D" uid="uid://3kjns4rw6bw8" path="res://texture/blocks.png" id="2_xr8d0"]

[sub_resource type="LabelSettings" id="LabelSettings_tjdg8"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw33o"]
atlas = ExtResource("2_xr8d0")
region = Rect2(256, 64, 64, 64)

[sub_resource type="LabelSettings" id="LabelSettings_kl056"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwfcp"]
atlas = ExtResource("2_xr8d0")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pl8j"]
atlas = ExtResource("2_xr8d0")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7736s"]
atlas = ExtResource("2_xr8d0")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l25x1"]
atlas = ExtResource("2_xr8d0")
region = Rect2(0, 65, 64, 64)

[sub_resource type="LabelSettings" id="LabelSettings_352w0"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl4bk"]
atlas = ExtResource("2_xr8d0")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pftj4"]
atlas = ExtResource("2_xr8d0")
region = Rect2(384, 448, 64, 64)

[node name="DialogPause" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.698296, 0.999672, 0.740673, 0.784314)
script = ExtResource("1_d2lr1")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0861111
anchor_top = 0.0015625
anchor_right = 0.936444
anchor_bottom = 0.120344
offset_left = 1.0
offset_top = -1.0
offset_right = -0.12001
offset_bottom = -0.0200005
text = "WIN"
label_settings = SubResource("LabelSettings_tjdg8")
horizontal_alignment = 1
script = ExtResource("2_pfbio")
metadata/_edit_use_anchors_ = true

[node name="ButtonNext" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.625
anchor_right = 0.950333
anchor_bottom = 0.73715
offset_right = -0.12
offset_bottom = 0.224
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ButtonNext"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0191571
anchor_top = 0.0843373
anchor_right = 0.264
anchor_bottom = 0.855
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_kw33o")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ButtonNext"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283046
anchor_top = 0.193
anchor_right = 0.969613
anchor_bottom = 0.795301
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0690155
offset_bottom = -0.0100021
text = "NEXT"
label_settings = SubResource("LabelSettings_kl056")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_pfbio")
metadata/_edit_use_anchors_ = true

[node name="ButtonAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.75
anchor_right = 0.950333
anchor_bottom = 0.86215
offset_right = -0.12
offset_bottom = 0.224
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ButtonAgain"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0191571
anchor_top = 0.0843373
anchor_right = 0.264
anchor_bottom = 0.855
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_uwfcp")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ButtonAgain"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283046
anchor_top = 0.193
anchor_right = 0.969613
anchor_bottom = 0.795301
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0690155
offset_bottom = -0.0100021
text = "AGAIN"
label_settings = SubResource("LabelSettings_kl056")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_pfbio")
metadata/_edit_use_anchors_ = true

[node name="ButtonExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.875
anchor_right = 0.950333
anchor_bottom = 0.988712
offset_right = -0.12
offset_bottom = 0.224
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ButtonExit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0191571
anchor_top = 0.0843373
anchor_right = 0.264
anchor_bottom = 0.855
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_3pl8j")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ButtonExit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283046
anchor_top = 0.193
anchor_right = 0.969613
anchor_bottom = 0.795301
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0690155
offset_bottom = -0.0100021
text = "EXIT"
label_settings = SubResource("LabelSettings_kl056")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_pfbio")
metadata/_edit_use_anchors_ = true

[node name="Target1" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.125
anchor_right = 0.950333
anchor_bottom = 0.24965
offset_right = -0.12
offset_bottom = 0.224
color = Color(0.629675, 0.629675, 0.629675, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Target1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 0.19646
anchor_bottom = 1.0
offset_right = -0.0460052
texture = SubResource("AtlasTexture_7736s")
metadata/_edit_use_anchors_ = true

[node name="Star" type="TextureRect" parent="Target1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.147239
anchor_top = -0.444445
anchor_right = 0.343264
anchor_bottom = 0.443958
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_l25x1")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Target1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294095
anchor_top = 0.111375
anchor_right = 0.98167
anchor_bottom = 0.889
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0245667
offset_bottom = -0.00799561
text = "AGAIN"
label_settings = SubResource("LabelSettings_352w0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("2_pfbio")
font_scale = 0.3
metadata/_edit_use_anchors_ = true

[node name="Target2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.3
anchor_right = 0.950333
anchor_bottom = 0.42465
offset_right = -0.12
offset_bottom = 0.224
color = Color(0.629675, 0.629675, 0.629675, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Target2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 0.19646
anchor_bottom = 1.0
offset_right = -0.0460052
texture = SubResource("AtlasTexture_hl4bk")
metadata/_edit_use_anchors_ = true

[node name="Star" type="TextureRect" parent="Target2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.147239
anchor_top = -0.444445
anchor_right = 0.343264
anchor_bottom = 0.443958
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_l25x1")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Target2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.318635
anchor_top = 0.111375
anchor_right = 0.98167
anchor_bottom = 0.889
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0245667
offset_bottom = -0.00799561
text = "AGAIN"
label_settings = SubResource("LabelSettings_352w0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("2_pfbio")
font_scale = 0.3
metadata/_edit_use_anchors_ = true

[node name="Target3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444444
anchor_top = 0.475
anchor_right = 0.950333
anchor_bottom = 0.59965
offset_right = -0.12
offset_bottom = 0.224
color = Color(0.629675, 0.629675, 0.629675, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Target3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 0.19646
anchor_bottom = 1.0
offset_right = -0.0460052
texture = SubResource("AtlasTexture_pftj4")
metadata/_edit_use_anchors_ = true

[node name="Star" type="TextureRect" parent="Target3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.147239
anchor_top = -0.444444
anchor_right = 0.343264
anchor_bottom = 0.443959
offset_right = 0.0960007
offset_bottom = 0.034996
texture = SubResource("AtlasTexture_l25x1")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Target3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.318635
anchor_top = 0.111375
anchor_right = 0.98167
anchor_bottom = 0.889
offset_left = 0.124992
offset_top = -0.019001
offset_right = -0.0245667
offset_bottom = -0.00799561
text = "AGAIN"
label_settings = SubResource("LabelSettings_352w0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("2_pfbio")
font_scale = 0.3
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="ButtonAgain" to="." method="_on_button_again_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_button_exit_pressed"]
